2008-04-09  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/randomize.c: fix handling of use_mask.
	
2008-04-09  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/dialogs/stroke-dialog.c
	* app/widgets/gimpstrokeeditor.[ch]: make stroking a bit
	friendlier.
	
2008-04-08  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimpdatafactory.c: don't forget writable path
	after loading directories.
	
2008-04-08  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimpdatafactory.c (gimp_data_factory_get_save_dir):
	simplify code.

	* app/widgets/gimpdatachooserdialog.c: remove a bit of 
	debugging code.
	
2008-04-08  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimptexttool.c
	* app/display/gimpdisplayshell.c
	* app/display/gimpdisplayshell-callbacks.[ch]: fix some
	bugs arising from making display shell a non-toplevel.
	
2008-04-08  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/gui/gui-message.c (gui_message_error_dialog):
	handle possibility that widget might not have a toplevel
	ancestor.
	
2008-04-08  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* libgimpwidgets/Makefile.am: add gimpscalecontrol.h
	to list of includes.
	
2008-04-08  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/display/gimpdisplayshell-appearance.c
	* app/actions/view-actions.c
	* app/actions/view-commands.c
	* menus/image-toolbar.xml
	* menus/image-menu.xml.in: tweak show grid and show selection
	actions, and make sure updating is correct.
	
2008-03-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/display/gimpdisplayshell.[ch]
	* app/display/gimpdisplayshell-scale.c
	* app/display/gimpdisplayshell-progress.c: make GimpDisplayShell
	a non-toplevel, and create a simple window to hold it.  This is
	a transitional step toward making the image display dockable.
	
2008-03-20  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/actions/gradients-actions.c
	* app/actions/palettes-actions.c
	* app/actions/patterns-actions.c